# GlobalComponentSeparation

./: CMakeLists.txt  README.md  main.cpp
data/pattern_ideal/compound/: ratio_list.txt
header/: QuickDemo.h  config.h  separation.h
